--- a/KRNL.WebMVC/Views/Message/Delete.cshtml
+++ b/KRNL.WebMVC/Views/Message/Delete.cshtml
@@ -65,7 +65,7 @@
 
             <tr>
                 <td colspan="1">
-                    @if (Model.IsRequest == KRNL.Data.noYes.Yes)
+                    @if (Model.IsRequest == true)
                     {
                         <a href="@Url.Action("CompleteRequest", "Message", new { id = Model.MessageId})"><img class="jobCheckPicIcon" src="/Content/krnlpics/reqCheck.png" alt="KRNL"></a>
                     }
